// {C} Copyright 2019 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package objstore;


import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/pensando/sw/api/meta.proto";

import "tenant.proto";

// Bucket names are always lower case
enum Buckets {
    images          = 0;
    techsupport     = 1;
    snapshots       = 2;
    events          = 3;
    auditevents     = 4;
    fwlogs          = 5;
}

message BucketSpec {
    string Description = 1 [(gogoproto.jsontag) = "description,omitempty"];
}

message BucketStatus {
    int32 NumObjects    = 1 [(gogoproto.jsontag) = "num-objects"];
    int32 TotalSize     = 2 [(gogoproto.jsontag) = "total-size"];
}

// Bucket is a collection of objects. Each bucket is scoped by the tenant. Default set of bucket types are defined
//  by the Buckets enum above.
message Bucket {
    api.TypeMeta T      = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta O    = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
    option (venice.objectPrefix) = {Collection: "buckets"};

    BucketSpec      Spec     = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec"];
    BucketStatus    Status   = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status"];

}

message ObjectStatus {
    // Size is the total size of the object
    int64 Size      = 1 [(gogoproto.jsontag) = "size"];
    // Digest is a hash digest of the object content.
    string Digest   = 2 [(gogoproto.jsontag) = "digest"];
}

message ObjectSpec {
    // Content-Type for the stored object. Can either be specified when uploading.
    //  or the backend guesses one if possible.
    string ContentType = 1 [(gogoproto.jsontag) = "content-type,omitempty"];
}

message StreamChunk {
    bytes Content = 1;
}

// Object is placed in a bucket determined by the Tenant and the Namespace in the ObjectMeta.
message Object {
    api.TypeMeta T      = 1  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = ",inline"];
    api.ObjectMeta O    = 2  [(gogoproto.embed) = true, (gogoproto.nullable) = false, (gogoproto.jsontag) = "meta,inline"];
    option (venice.objectPrefix) = {Collection: "objects", Path: "/{O.Tenant}/{O.Namespace}"};

    ObjectSpec      Spec     = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "spec"];
    ObjectStatus    Status   = 4 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "status"];
}